<resources>
    <string name="app_name">myHotel</string>
    <string name="your_comfor_our_pleasure">Your comfort ,our pleasure.</string>
    <string name="myhotel">myHotel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome."</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account_click_here">No account? Click here</string>
    <string name="sign_in">Sign In</string>
    <string name="glad_you_are_joining_us">Glad you are joining us.</string>
    <string name="name">full name</string>
    <string name="phone_number">phone number</string>
    <string name="confirm_passoword">confirm passoword</string>
    <string name="changed_your_mind_n_go_back_to_login">Changed your mind? go back to login</string>
    <string name="register">Register</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Open">Open</string>
    <string name="Close">Closer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">LogOut</string>
    <string name="edit_profile">Edit profile</string>
    <string name="id">%id%</string>
    <string name="select_a_room_type_to_being">select a room type to being</string>
    <string name="todo">TODO</string>
    <string name="single_rooms">Single rooms</string>
    <string name="roomdescriprition">%roomDescriprition%</string>
    <string name="roomtype">%roomType%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chose_from_the_available_offers_down_below">Choose from the available offers below:</string>
    <string name="available_reservation">Available reservation</string>
    <string name="my_reservation">My Reservation</string>
    <string name="available_reservations">Available reservations</string>
    <string name="my_reservations">My reservations</string>
    <string name="i_would_appear_you_have_no_reservations">It appears you have no reservations</string>
    <string name="price">%price%</string>
    <string name="roomdescription">Room Description:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="from_to">%from%to%</string>
    <string name="totalprice">%totalprice%</string>
    <string name="cancel">Cancel</string>
</resources>