<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    tools:context=".ui.LoginActivity">

    <EditText
        android:id="@+id/pass_input"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="24dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="375dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/img_login"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/welcome"
        android:textColor="@color/creamWhite"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="316dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/prompt_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user"
        app:layout_constraintBottom_toBottomOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/email_input"
        app:layout_constraintTop_toTopOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.466"
        android:alpha="0.8"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="@+id/pass_input"
        app:layout_constraintEnd_toEndOf="@+id/pass_input"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/pass_input"
        app:layout_constraintTop_toTopOf="@+id/pass_input"
        app:layout_constraintVertical_bias="0.466"
        android:alpha="0.8"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txt_newacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:alpha="0.8"
        android:fontFamily="@font/josefin_sans_semibold_italic"
        android:text="@string/no_account_click_here"
        android:textColor="@color/creamWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/lgn_btn"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginTop="86dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_input"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>