<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="5dp">


    <androidx.cardview.widget.CardView
        android:layout_width="339dp"
        android:layout_height="124dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Black"
            android:alpha="0.8"
            >

            <TextView
                android:id="@+id/bookedroom_type"
                style="@style/SwitchTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roomtype"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.164" />

            <TextView
                style="@style/SwitchTextAppearance"
                android:id="@+id/bookedroom_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/from_to"
                android:textSize="16sp"
                android:alpha="0.8"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bookedroom_type"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/bookedroom_type"
                app:layout_constraintTop_toBottomOf="@+id/bookedroom_type"
                app:layout_constraintVertical_bias="0.103" />

            <TextView
                android:id="@+id/paid_price"
                style="@style/SwitchTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalprice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.943"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.847" />

            <Button
                android:id="@+id/cancel_booking"
                style="@style/SwitchTextAppearance"
                android:layout_width="66dp"
                android:layout_height="35dp"
                android:background="@drawable/cancel_button"
                android:text="@string/cancel"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.884"
                app:layout_constraintStart_toEndOf="@+id/bookedroom_type"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.089" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>