<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:background="@color/Black">

    <TextView
        android:id="@+id/textView"
        android:layout_width="185dp"
        android:layout_height="112dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/glad_you_are_joining_us"
        android:textColor="@color/creamWhite"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="412dp"
        android:layout_height="362dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ill_register__1_" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/confirm_passoword"
        android:inputType="textPassword"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_input_create" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="60dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText

        android:id="@+id/email_input_create"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <EditText
        android:id="@+id/phone_create"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pass" />

    <EditText
        android:id="@+id/pass_input_create"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="12dp"
        android:alpha="0.8"
        android:background="@drawable/input_border"
        android:ems="10"
        android:fontFamily="@font/josefin_sans_semibold"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingVertical="2sp"
        android:paddingStart="39sp"
        android:paddingEnd="5dp"
        android:textColor="@color/creamWhite"
        android:textColorHint="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input_create" />

    <ImageView
        android:alpha="0.8"
        android:id="@+id/imageuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="@+id/name_input"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/name_input"
        app:layout_constraintTop_toTopOf="@+id/name_input"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_user" />

    <ImageView
        android:alpha="0.8"
        android:id="@+id/imagemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/email_input_create"
        app:layout_constraintEnd_toEndOf="@+id/email_input_create"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="@+id/email_input_create"
        app:layout_constraintTop_toTopOf="@+id/email_input_create"
        app:srcCompat="@drawable/ic_mail" />

    <ImageView
        android:alpha="0.8"
        android:id="@+id/imagepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/pass_input_create"
        app:layout_constraintEnd_toEndOf="@+id/pass_input_create"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/pass_input_create"
        app:layout_constraintTop_toTopOf="@+id/pass_input_create"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_unlock" />

    <ImageView
        android:id="@+id/imageconfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_pass"
        app:layout_constraintEnd_toEndOf="@+id/confirm_pass"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/confirm_pass"
        app:layout_constraintTop_toTopOf="@+id/confirm_pass"
        app:layout_constraintVertical_bias="0.533"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:alpha="0.8"
        android:id="@+id/imagephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/phone_create"
        app:layout_constraintEnd_toEndOf="@+id/phone_create"
        app:layout_constraintHorizontal_bias="0.035"
        app:layout_constraintStart_toStartOf="@+id/phone_create"
        app:layout_constraintTop_toTopOf="@+id/phone_create"
        app:layout_constraintVertical_bias="0.47"
        app:srcCompat="@drawable/ic_vector" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/creamWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_create"
        app:layout_constraintVertical_bias="0.364" />

    <TextView
        android:id="@+id/txt_bk_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:fontFamily="@font/josefin_sans_semibold"
        android:text="@string/changed_your_mind_n_go_back_to_login"
        android:textAlignment="center"
        android:textColor="@color/creamWhite"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="0.66" />
</androidx.constraintlayout.widget.ConstraintLayout>