<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainMenu">

        <ImageView
            android:id="@+id/menu_open"
            android:layout_width="23dp"
            android:layout_height="22dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/txt_welcome"
            app:layout_constraintEnd_toStartOf="@+id/btn_switch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.313"
            app:srcCompat="@drawable/ic_menu" />

        <FrameLayout
            android:id="@+id/fragment_container"

            android:layout_width="379dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/corners_frame"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
            app:layout_constraintVertical_bias="0.0">


        </FrameLayout>

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="620dp"
            android:alpha="0.7"
            android:fontFamily="@font/josefin_sans_semibold_italic"
            android:text="@string/id"
            android:textColor="@color/Black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_switch"
            app:layout_constraintVertical_bias="0.323" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_semibold"
            android:padding="4dp"
            android:textOff="@string/available_reservations"
            android:textOn="@string/my_reservations"
            android:textSize="12sp"
            android:thumb="@drawable/thumb_sw"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.587"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.007"
            app:showText="true"
            app:switchTextAppearance="@style/SwitchTextAppearance"
            app:track="@drawable/track" />

        <TextView
            android:id="@+id/txt_on"
            style="@style/SwitchTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_reservations"
            app:layout_constraintBottom_toBottomOf="@+id/btn_switch"
            app:layout_constraintEnd_toEndOf="@+id/btn_switch"
            app:layout_constraintHorizontal_bias="0.768"
            app:layout_constraintStart_toStartOf="@+id/btn_switch"
            app:layout_constraintTop_toTopOf="@+id/btn_switch" />

        <TextView
            android:id="@+id/txt_off"
            style="@style/SwitchTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available_reservations"
            app:layout_constraintBottom_toBottomOf="@+id/btn_switch"
            app:layout_constraintEnd_toStartOf="@+id/txt_on"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toStartOf="@+id/btn_switch"
            app:layout_constraintTop_toTopOf="@+id/btn_switch" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>